--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,4 +29,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/sera-be-Builder:latest
+        tags: ghcr.io/${{ github.repository_owner }}/sera-be-builder:latest
