--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "api-spec-converter": "^2.12.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
