--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/formbody": "^7.4.0",
     "api-spec-converter": "^2.12.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fastify": "^4.27.0",
+    "fastify-plugin": "^4.5.1",
     "http-proxy": "^1.18.1",
     "js-yaml": "^4.1.0",
     "mongoose": "^7.4.1",
