--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "api-spec-converter": "^2.12.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fastify": "^4.27.0",
