--- a/.github/workflows/documentation-update.yml
+++ b/.github/workflows/documentation-update.yml
@@ -29,6 +29,7 @@ jobs:
           mkdir -p docs
           REPO_NAME=$(basename "$GITHUB_REPOSITORY" | awk '{print tolower($0)}' | sed 's/[ _]/-/g')
           touch docs/${REPO_NAME}.md
+          echo "$REPO_NAME"
 
       # Run JSDoc to Markdown
       - name: Generate JSDoc Markdown
@@ -39,6 +40,7 @@ jobs:
       # Push the generated docs to the target repository
       - name: Upload generated markdown to documentation repository
         run: |
+          REPO_NAME=$(basename "$GITHUB_REPOSITORY" | awk '{print tolower($0)}' | sed 's/[ _]/-/g')
           git clone https://github.com/Sera-ai/sera_documentation.git
           cp docs/*.md sera_documentation/beta/development/
           cd sera_documentation
