api doc changes

--- a/.github/workflows/documentation-update.yml
+++ b/.github/workflows/documentation-update.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Generate JSDoc Markdown
         run: |
           REPO_NAME=$(basename "$GITHUB_REPOSITORY" | awk '{print tolower($0)}' | sed 's/[ _]/-/g')
-          npx jsdoc2md src/**/*.js > docs/${REPO_NAME}.md
+          git clone git@github.com:Sera-ai/sera_documentation.git
+          cp sera_documentation/api-template.hbs api-template.hbs
+          npx jsdoc2md --template api-template.hbs src/**/*.js > docs/${REPO_NAME}.md
 
       # Add the private SSH key from secrets
       - name: Setup SSH key
