--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -12,22 +13,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apidevtools/swagger-parser": "^10.1.0",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/formbody": "^7.4.0",
+    "fastify": "^5.0.0",
+    "fastify-plugin": "^5.0.0",
+    "@fastify/cors": "^10.0.0",
+    "@fastify/express": "^4.0.0",
+    "@fastify/formbody": "^8.0.0",
+    "@fastify/multipart": "^9.0.0",
+    "mongoose": "^7.4.1",
+    "mongoose-gridfs": "^1.3.0",
     "api-spec-converter": "^2.12.0",
+    "@apidevtools/swagger-parser": "^10.1.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fastify": "^4.27.0",
-    "fastify-plugin": "^4.5.1",
+    "handlebars": "^4.7.8",
     "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "js-yaml": "^4.1.0",
-    "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "ws": "^8.17.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7"
   }
 }
